Bug 357682 - Combo box popups for tabular view not always fit in the current screen
Summary: Combo box popups for tabular view not always fit in the current screen
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 2.9.11
Platform: Compiled Sources All
: NOR normal
Target Milestone: 2.9.11
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-08 00:23 UTC by Jarosław Staniek
Modified: 2016-03-03 22:49 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2016-01-08 00:23:56 UTC
Combo boxes for tabular view not always fit in the current screen. 

Reproducible: Always

Steps to Reproduce:
1. Use table e.g. table B from this bug https://bugs.kde.org/show_bug.cgi?id=357655
2. Open the combo box popup for cell that's on the very bottom of the maximized window or on the very right.

Actual Results:  
If the combo box popup is tall or wide enough, it is partially displayed outside of the screen.

Expected Results:
The combo box popup is shifted up or/and left so it can fit on the current screen.
Comment 1 Jarosław Staniek 2016-01-19 12:50:26 UTC
Related defect: combo box popup appears on the first screen, it should appear on the screen that contains the combo box.
Comment 2 Jarosław Staniek 2016-01-19 21:26:40 UTC
Git commit 9082f8068824ba32224d8cc8cec37e8c1aabc876 by Jaroslaw Staniek.
Committed on 19/01/2016 at 21:15.
Pushed by staniek into branch 'calligra/2.9'.

Kexi: Make combo box popups for tabular view fit in the current screen

Summary:
FIXED-IN:2.9.11

Test Plan: Try a table and form with combo boxes, pop up near the screen borders and on other screens than 1st

Reviewers: piggz

Subscribers: Kexi-Devel-list

Differential Revision: https://phabricator.kde.org/D841

M  +34   -2    kexi/widget/tableview/kexicomboboxbase.cpp
M  +6    -2    kexi/widget/tableview/kexicomboboxpopup.cpp

http://commits.kde.org/calligra/9082f8068824ba32224d8cc8cec37e8c1aabc876
Comment 3 Jarosław Staniek 2016-02-29 23:35:55 UTC
Git commit ee9299a317a43e24410acc6697b638ef673db880 by Jaroslaw Staniek.
Committed on 29/02/2016 at 23:07.
Pushed by staniek into branch 'master'.

Make combo box popups for tabular view fit in the current screen
FIXED-IN:2.9.11

Test Plan: Try a table and form with combo boxes, pop up near the screen borders and on other screens than 1st

Differential Revision: https://phabricator.kde.org/D841

(from calligra.git)

M  +33   -1    src/widget/tableview/kexicomboboxbase.cpp
M  +1    -1    src/widget/tableview/kexicomboboxbase.h
M  +6    -2    src/widget/tableview/kexicomboboxpopup.cpp
M  +1    -1    src/widget/tableview/kexicomboboxpopup.h

http://commits.kde.org/kexi/ee9299a317a43e24410acc6697b638ef673db880