Kexi: Make combo box popups for tabular view fit in the current screen

Summary:
BUG:357682
FIXED-IN:2.9.11

Test Plan: Try a table and form with combo boxes, pop up near the screen borders and on other screens than 1st

Reviewers: piggz

Subscribers: Kexi-Devel-list

Differential Revision: https://phabricator.kde.org/D841